@@ -1,3 +1,9 @@
+2011-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tools/fax2ps.c (main): Use tmpfile() rather than mkstemp() since
+	it is much more portable.  Tmpfile is included in ISO/IEC
+	9899:1990 and the WIN32 CRT.
+
 2011-03-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tiffiop.h: avoid declaring int64/uint64 on AIX with XLC
